src/test/ui/error-codes/E0027.stderr
error[E0027]: pattern does not mention field `name`
  --> $DIR/E0027.rs:20:9
   |
20 |         Dog { age: x } => {}
   |         ^^^^^^^^^^^^^^ missing field `name`

error: aborting due to previous error

